add final comments

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       <p id="currentDay" class="lead"></p>
       <p id="currentTime" class="lead"></p>
     </header>
+
+    <!--Timeblock container with the different hourly blocks-->
     <div class="container-lg px-5">
 
       <div id="hour-8" class="row time-block">
